--- a/workbooks/rpki_riswhois_atlas.ipynb
+++ b/workbooks/rpki_riswhois_atlas.ipynb
@@ -26,11 +26,9 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys,inspect\n",
+    "import os,sys\n",
     "\n",
-    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
-    "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.insert(0,parentdir)"
+    "sys.path.insert(0,os.environ['PWD'])"
    ]
   },
   {
@@ -1626,7 +1624,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
