--- a/workbooks/rsync_logs.ipynb
+++ b/workbooks/rsync_logs.ipynb
@@ -8,11 +8,9 @@
    "outputs": [],
    "source": [
     "# Add parent dir to path\n",
-    "import os,sys,inspect\n",
+    "import os,sys\n",
     "\n",
-    "currentdir = os.path.dirname(os.path.abspath(inspect.getfile(inspect.currentframe())))\n",
-    "parentdir = os.path.dirname(currentdir)\n",
-    "sys.path.insert(0,parentdir) "
+    "sys.path.insert(0,os.environ['PWD'])"
    ]
   },
   {
@@ -1849,7 +1847,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1863,7 +1861,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
