Small changes from over the last week

--- a/workbooks/data_by_pseudonym.ipynb
+++ b/workbooks/data_by_pseudonym.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "85fec9fb-3559-4fb8-8d8d-2f328322121a",
    "metadata": {},
    "outputs": [],
@@ -22,40 +22,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fcfb6c16-04d6-4035-bbc3-b2d73f727573",
    "metadata": {},
    "outputs": [],
    "source": [
     "async with aiohttp.ClientSession() as session:\n",
-    "    async with session.get('https://ftp.ripe.net/pub/stats/ripencc/nro-stats/20240109/nro-delegated-stats') as resp:\n",
+    "    async with session.get('https://ftp.ripe.net/pub/stats/ripencc/nro-stats/latest/nro-delegated-stats') as resp:\n",
     "        data = read_delegated_stats(io.StringIO(await resp.text()))\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "ee43faca-c77f-4973-ba3d-a6f6019d4c1c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "rir                  category\n",
-       "country              category\n",
-       "afi                  category\n",
-       "prefix                 object\n",
-       "prefix_size             int64\n",
-       "date           datetime64[ns]\n",
-       "status               category\n",
-       "uuid                   object\n",
-       "category             category\n",
-       "resource               object\n",
+       "rir                        category\n",
+       "country                    category\n",
+       "afi                        category\n",
+       "raw_resource                 object\n",
+       "length                        int64\n",
+       "date            datetime64[ns, UTC]\n",
+       "status                     category\n",
+       "opaque_id                    object\n",
+       "category                   category\n",
+       "resource                     object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,40 +66,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "0c998446-97a1-4f10-a9e3-7b85cb744ff1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "resources_by_uuid = data.loc[data.afi != 'asn'].groupby(['uuid']) \\\n",
+    "resources_by_uuid = data.loc[data.afi != 'asn'].groupby(['opaque_id']) \\\n",
     "  .agg({'resource': lambda grp: netaddr.IPSet(grp)})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "8a4e5789-1cfa-44b0-a7e7-b26ebb314a1f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "uuid\n",
+       "opaque_id\n",
        "00004a29a9bbf62af6b8e5b91b760abc                                        [192.149.81.0/24]\n",
        "000076699efb0f677b8a77052cacd0eb                                        [204.68.168.0/24]\n",
-       "0002bdbb-85df-4f43-a83b-3dfe3879b7dd                   [185.119.204.0/22, 2a06:8c00::/29]\n",
-       "0003670b-77cd-4f08-949a-e892c9d63fe2                                   [194.117.228.0/23]\n",
-       "00038785-5f1a-490a-8a6d-481377eed99b                                    [194.242.55.0/24]\n",
+       "0001f0f8-7af5-4144-8069-8bcb938afb99                                     [83.243.24.0/21]\n",
+       "0004cc00-194f-4e6b-83fa-430c6b1e25cc                                 [2001:67c:1034::/48]\n",
+       "00057f30-ef27-478d-aa11-1e7d2c8bf67c                    [45.153.144.0/22, 2a0f:3d40::/29]\n",
        "                                                              ...                        \n",
-       "ffffb4f7-78b5-4c40-b2e0-3727baa46c82                                   [185.226.136.0/22]\n",
+       "ffff0239b0911043080384096bee384b                                         [208.68.80.0/22]\n",
        "iana                                    [160.20.241.0/24, 160.20.245.0/24, 192.47.28.0...\n",
        "ietf                                    [0.0.0.0/8, 10.0.0.0/8, 100.64.0.0/10, 127.0.0...\n",
-       "lacnic                                  [45.6.236.0/22, 45.68.33.0/24, 45.68.52.0/22, ...\n",
-       "ripencc                                 [5.63.16.0/21, 45.10.36.0/22, 45.15.41.0/24, 4...\n",
-       "Name: resource, Length: 109105, dtype: object"
+       "lacnic                                  [45.6.236.0/22, 45.68.33.0/24, 45.68.56.0/21, ...\n",
+       "ripencc                                 [45.88.224.0/22, 45.145.36.0/22, 46.255.24.0/2...\n",
+       "Name: resource, Length: 109286, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "id": "bd897c38-bc0a-493b-b176-e65b9e0446b5",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "id": "90975756-7bc7-42b1-9bc5-8656b40fc847",
    "metadata": {},
    "outputs": [
@@ -145,34 +145,34 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>uuid</th>\n",
+       "      <th>opaque_id</th>\n",
        "      <th>ipv4_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>23045</th>\n",
-       "      <td>314288</td>\n",
+       "      <th>53551</th>\n",
+       "      <td>96d71713b022d9b63365ab30f8154c9c</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>34352</th>\n",
-       "      <td>51b1303c2cece01e6b539e51dbd817b1</td>\n",
+       "      <th>47935</th>\n",
+       "      <td>81fae7555e311369b0290c7fe7616bd9</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>52887</th>\n",
-       "      <td>94a1cd3f-99bc-4635-8d4a-84a4a6fbbe06</td>\n",
+       "      <th>91423</th>\n",
+       "      <td>bdf1235f-3296-434a-b2e3-6de246ef7ba8</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12280</th>\n",
-       "      <td>215638</td>\n",
+       "      <th>36098</th>\n",
+       "      <td>57722611-75ba-4b70-a31a-38537523fe15</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69858</th>\n",
-       "      <td>A9248A06</td>\n",
+       "      <th>91425</th>\n",
+       "      <td>bdf4f5c5-24c9-4340-9045-b1100f4bc712</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -181,53 +181,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28010</th>\n",
+       "      <th>27969</th>\n",
        "      <td>3a7b40ab58f6de4849b12c87e5806b7c</td>\n",
        "      <td>70056448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>32420</th>\n",
+       "      <th>32400</th>\n",
        "      <td>4a8a91b5b89d3f900098ebf73ca0b118</td>\n",
        "      <td>77101824</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>100909</th>\n",
+       "      <th>101033</th>\n",
        "      <td>e220ed812a4c17f6a76b9b930dae7f50</td>\n",
        "      <td>80084224</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>90582</th>\n",
+       "      <th>90717</th>\n",
        "      <td>bb474b75b6f23182ffa56daf1cf9ec23</td>\n",
        "      <td>221958912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>109102</th>\n",
+       "      <th>109283</th>\n",
        "      <td>ietf</td>\n",
        "      <td>592709632</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>109105 rows × 2 columns</p>\n",
+       "<p>109286 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                        uuid  ipv4_count\n",
-       "23045                                 314288           0\n",
-       "34352       51b1303c2cece01e6b539e51dbd817b1           0\n",
-       "52887   94a1cd3f-99bc-4635-8d4a-84a4a6fbbe06           0\n",
-       "12280                                 215638           0\n",
-       "69858                               A9248A06           0\n",
+       "                                   opaque_id  ipv4_count\n",
+       "53551       96d71713b022d9b63365ab30f8154c9c           0\n",
+       "47935       81fae7555e311369b0290c7fe7616bd9           0\n",
+       "91423   bdf1235f-3296-434a-b2e3-6de246ef7ba8           0\n",
+       "36098   57722611-75ba-4b70-a31a-38537523fe15           0\n",
+       "91425   bdf4f5c5-24c9-4340-9045-b1100f4bc712           0\n",
        "...                                      ...         ...\n",
-       "28010       3a7b40ab58f6de4849b12c87e5806b7c    70056448\n",
-       "32420       4a8a91b5b89d3f900098ebf73ca0b118    77101824\n",
-       "100909      e220ed812a4c17f6a76b9b930dae7f50    80084224\n",
-       "90582       bb474b75b6f23182ffa56daf1cf9ec23   221958912\n",
-       "109102                                  ietf   592709632\n",
+       "27969       3a7b40ab58f6de4849b12c87e5806b7c    70056448\n",
+       "32400       4a8a91b5b89d3f900098ebf73ca0b118    77101824\n",
+       "101033      e220ed812a4c17f6a76b9b930dae7f50    80084224\n",
+       "90717       bb474b75b6f23182ffa56daf1cf9ec23   221958912\n",
+       "109283                                  ietf   592709632\n",
        "\n",
-       "[109105 rows x 2 columns]"
+       "[109286 rows x 2 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
