Changes while talking through the workbook

--- a/workbooks/riswhois_ip_utilisation.ipynb
+++ b/workbooks/riswhois_ip_utilisation.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "protected-royalty",
    "metadata": {},
    "outputs": [
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "aef6a632-809a-4d52-93ee-a43b734f3f94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "realistic_announcements_v4 = ris_v4[ris_v4.seen_by_peers > 50].copy()\n",
+    "realistic_announcements_v4 = ris_v4[ris_v4.seen_by_peers > 10].copy()\n",
     "realistic_announcements_v4_set = netaddr.IPSet(realistic_announcements_v4.prefix)"
    ]
   },
@@ -113,36 +113,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "72dcc322-445d-4923-b073-116eb90dea63",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#announced_frac = pd.DataFrame([{\"prefix\": f\"{x}.0.0.0/8\", \"announced_fraction\": (realistic_announcements_v4_set & netaddr.IPSet([f\"{x}.0.0.0/8\"])).size/2**24} for x in range(256)])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "33ce7401-6239-45f0-b562-a6a3321d12f8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#announced_frac"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "1acc4c98-f8ce-47ba-a85d-b303ed23551a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#announced_frac.plot.hist(bins=32)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "815de4ad-2b38-40ad-9b17-ebf0d58cae77",
    "metadata": {},
@@ -151,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "electrical-chess",
    "metadata": {},
    "outputs": [],
@@ -162,30 +132,217 @@
     "# And add address family\n",
     "rpki_roas['af'] = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).version)\n",
     "# And prefix length (to chart later)\n",
-    "rpki_roas['prefix_length'] = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).prefixlen)\n",
-    "\n",
+    "rpki_roas['prefix_length'] = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).prefixlen)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "cefa0f6f-dd33-4835-828c-3456b52678c4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rpki_roas_v4 = rpki_roas[rpki_roas.af == 4]\n",
     "rpki_roas_v6 = rpki_roas[rpki_roas.af == 6]\n",
     "\n",
     "# And build patricia tries\n",
     "roa_lookup_v4 = RouteOriginAuthorizationLookup(rpki_roas_v4)\n",
-    "roa_lookup_v6 = RouteOriginAuthorizationLookup(rpki_roas_v6)\n"
+    "roa_lookup_v6 = RouteOriginAuthorizationLookup(rpki_roas_v6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
+   "id": "5cad37f8-5d95-4cab-867c-1061d7869ac2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>origin</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>seen_by_peers</th>\n",
+       "      <th>prefix_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>552108</th>\n",
+       "      <td>265969</td>\n",
+       "      <td>131.196.98.0/24</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15392</th>\n",
+       "      <td>44477</td>\n",
+       "      <td>5.181.20.0/24</td>\n",
+       "      <td>422.0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194799</th>\n",
+       "      <td>20474</td>\n",
+       "      <td>64.139.100.0/23</td>\n",
+       "      <td>382.0</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23200</th>\n",
+       "      <td>27025</td>\n",
+       "      <td>12.188.185.0/24</td>\n",
+       "      <td>385.0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>308564</th>\n",
+       "      <td>34010</td>\n",
+       "      <td>87.248.103.0/24</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        origin           prefix  seen_by_peers  prefix_length\n",
+       "552108  265969  131.196.98.0/24           15.0             24\n",
+       "15392    44477    5.181.20.0/24          422.0             24\n",
+       "194799   20474  64.139.100.0/23          382.0             23\n",
+       "23200    27025  12.188.185.0/24          385.0             24\n",
+       "308564   34010  87.248.103.0/24          412.0             24"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>origin</th>\n",
+       "      <th>prefix</th>\n",
+       "      <th>seen_by_peers</th>\n",
+       "      <th>prefix_length</th>\n",
+       "      <th>rov</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>684271</th>\n",
+       "      <td>7552</td>\n",
+       "      <td>171.246.136.0/21</td>\n",
+       "      <td>405.0</td>\n",
+       "      <td>21</td>\n",
+       "      <td>invalid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>991488</th>\n",
+       "      <td>55967</td>\n",
+       "      <td>202.46.53.0/24</td>\n",
+       "      <td>381.0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>811992</th>\n",
+       "      <td>27715</td>\n",
+       "      <td>186.202.16.0/22</td>\n",
+       "      <td>403.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101100</th>\n",
+       "      <td>4760</td>\n",
+       "      <td>42.3.48.0/20</td>\n",
+       "      <td>385.0</td>\n",
+       "      <td>20</td>\n",
+       "      <td>invalid</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>814239</th>\n",
+       "      <td>262779</td>\n",
+       "      <td>186.227.240.0/22</td>\n",
+       "      <td>385.0</td>\n",
+       "      <td>22</td>\n",
+       "      <td>unknown</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        origin            prefix  seen_by_peers  prefix_length      rov\n",
+       "684271    7552  171.246.136.0/21          405.0             21  invalid\n",
+       "991488   55967    202.46.53.0/24          381.0             24  unknown\n",
+       "811992   27715   186.202.16.0/22          403.0             22  unknown\n",
+       "101100    4760      42.3.48.0/20          385.0             20  invalid\n",
+       "814239  262779  186.227.240.0/22          385.0             22  unknown"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "del realistic_announcements_v4['rov']\n",
+    "display(realistic_announcements_v4.sample(5))\n",
+    "# calculate ROV status\n",
+    "# apply: execute the function, using a lambda.\n",
+    "# - axis=1: rows\n",
+    "realistic_announcements_v4['rov'] = realistic_announcements_v4.apply(lambda x: rov_validity(x, roa_lookup_v4), axis=1)\n",
+    "# post-lookup\n",
+    "display(realistic_announcements_v4.sample(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "id": "0a20788a-d55c-4a79-bd9e-35e0962a47ea",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# calculate ROV status\n",
-    "realistic_announcements_v4['rov'] = realistic_announcements_v4.apply(lambda x: rov_validity(x, roa_lookup_v4), axis=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "6afd66e9-c3eb-467d-884d-b630798ee830",
    "metadata": {},
    "outputs": [],
@@ -201,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "e4f95e94-fcfe-4e0e-8ab9-2ad62b2bccca",
    "metadata": {},
    "outputs": [
@@ -235,43 +392,43 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>64</th>\n",
+       "      <th>70</th>\n",
        "      <td>13335</td>\n",
        "      <td>1.0.0.0/24</td>\n",
-       "      <td>414.0</td>\n",
+       "      <td>427.0</td>\n",
        "      <td>24</td>\n",
        "      <td>invalid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>65</th>\n",
+       "      <th>71</th>\n",
        "      <td>38803</td>\n",
        "      <td>1.0.4.0/22</td>\n",
-       "      <td>416.0</td>\n",
+       "      <td>385.0</td>\n",
        "      <td>22</td>\n",
        "      <td>invalid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>66</th>\n",
+       "      <th>72</th>\n",
        "      <td>38803</td>\n",
        "      <td>1.0.5.0/24</td>\n",
-       "      <td>413.0</td>\n",
+       "      <td>382.0</td>\n",
        "      <td>24</td>\n",
        "      <td>invalid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>18144</td>\n",
-       "      <td>1.0.64.0/18</td>\n",
-       "      <td>376.0</td>\n",
-       "      <td>18</td>\n",
+       "      <th>73</th>\n",
+       "      <td>2519</td>\n",
+       "      <td>1.0.16.0/24</td>\n",
+       "      <td>385.0</td>\n",
+       "      <td>24</td>\n",
        "      <td>unknown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>23969</td>\n",
-       "      <td>1.0.128.0/17</td>\n",
-       "      <td>426.0</td>\n",
-       "      <td>17</td>\n",
+       "      <th>74</th>\n",
+       "      <td>141748</td>\n",
+       "      <td>1.0.32.0/24</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>24</td>\n",
        "      <td>unknown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -283,68 +440,68 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1051113</th>\n",
+       "      <th>1132139</th>\n",
        "      <td>63199</td>\n",
        "      <td>223.255.250.0/24</td>\n",
-       "      <td>366.0</td>\n",
+       "      <td>380.0</td>\n",
        "      <td>24</td>\n",
        "      <td>unknown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1051114</th>\n",
+       "      <th>1132140</th>\n",
        "      <td>63199</td>\n",
        "      <td>223.255.251.0/24</td>\n",
-       "      <td>366.0</td>\n",
+       "      <td>380.0</td>\n",
        "      <td>24</td>\n",
        "      <td>unknown</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1051115</th>\n",
+       "      <th>1132141</th>\n",
        "      <td>58519</td>\n",
        "      <td>223.255.252.0/24</td>\n",
-       "      <td>364.0</td>\n",
+       "      <td>381.0</td>\n",
        "      <td>24</td>\n",
        "      <td>invalid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1051116</th>\n",
+       "      <th>1132143</th>\n",
        "      <td>58519</td>\n",
        "      <td>223.255.253.0/24</td>\n",
-       "      <td>364.0</td>\n",
+       "      <td>381.0</td>\n",
        "      <td>24</td>\n",
        "      <td>invalid</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1051117</th>\n",
+       "      <th>1132144</th>\n",
        "      <td>55415</td>\n",
        "      <td>223.255.254.0/24</td>\n",
-       "      <td>420.0</td>\n",
+       "      <td>391.0</td>\n",
        "      <td>24</td>\n",
        "      <td>unknown</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>927374 rows × 5 columns</p>\n",
+       "<p>961530 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        origin            prefix  seen_by_peers  prefix_length      rov\n",
-       "64       13335        1.0.0.0/24          414.0             24  invalid\n",
-       "65       38803        1.0.4.0/22          416.0             22  invalid\n",
-       "66       38803        1.0.5.0/24          413.0             24  invalid\n",
-       "67       18144       1.0.64.0/18          376.0             18  unknown\n",
-       "68       23969      1.0.128.0/17          426.0             17  unknown\n",
-       "...        ...               ...            ...            ...      ...\n",
-       "1051113  63199  223.255.250.0/24          366.0             24  unknown\n",
-       "1051114  63199  223.255.251.0/24          366.0             24  unknown\n",
-       "1051115  58519  223.255.252.0/24          364.0             24  invalid\n",
-       "1051116  58519  223.255.253.0/24          364.0             24  invalid\n",
-       "1051117  55415  223.255.254.0/24          420.0             24  unknown\n",
+       "         origin            prefix  seen_by_peers  prefix_length      rov\n",
+       "70        13335        1.0.0.0/24          427.0             24  invalid\n",
+       "71        38803        1.0.4.0/22          385.0             22  invalid\n",
+       "72        38803        1.0.5.0/24          382.0             24  invalid\n",
+       "73         2519       1.0.16.0/24          385.0             24  unknown\n",
+       "74       141748       1.0.32.0/24          396.0             24  unknown\n",
+       "...         ...               ...            ...            ...      ...\n",
+       "1132139   63199  223.255.250.0/24          380.0             24  unknown\n",
+       "1132140   63199  223.255.251.0/24          380.0             24  unknown\n",
+       "1132141   58519  223.255.252.0/24          381.0             24  invalid\n",
+       "1132143   58519  223.255.253.0/24          381.0             24  invalid\n",
+       "1132144   55415  223.255.254.0/24          391.0             24  unknown\n",
        "\n",
-       "[927374 rows x 5 columns]"
+       "[961530 rows x 5 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
