Many changes over time

--- a/workbooks/rpki_riswhois_atlas.ipynb
+++ b/workbooks/rpki_riswhois_atlas.ipynb
@@ -120,9 +120,9 @@
     "# > 200MB of data\n",
     "rpki_roas = await read_jsonext(\"https://rpki-validator.ripe.net/jsonext\")\n",
     "# And add address family\n",
-    "rpki_roas['af'] = af = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).version)\n",
+    "rpki_roas['af'] = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).version)\n",
     "# And prefix length (to chart later)\n",
-    "rpki_roas['prefix_length'] = af = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).prefixlen)\n"
+    "rpki_roas['prefix_length'] = rpki_roas.prefix.map(lambda p: ipaddress.ip_network(p).prefixlen)\n"
    ]
   },
   {
